feat: Solve/Get quiz
